[gd_scene load_steps=4 format=3 uid="uid://bp5wn1hqq63m4"]

[ext_resource type="Texture2D" uid="uid://d3h3x58oxba0j" path="res://dialogo/dialogo_v1.png" id="1_h40qi"]
[ext_resource type="Script" path="res://scripts/npc_quest.gd" id="1_ms43n"]
[ext_resource type="FontFile" uid="uid://c1raomqvsh12w" path="res://fontes/mister_pixel_16/MP16REG.ttf" id="2_yl4ud"]

[node name="NPC_Quest" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ms43n")

[node name="Quest_01" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_left = -72.0
offset_top = -152.0
offset_right = 81.0
offset_bottom = -61.0
texture = ExtResource("1_h40qi")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Name" type="RichTextLabel" parent="Quest_01"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 202.0
offset_bottom = 31.0
scale = Vector2(0.7, 0.7)
theme_override_colors/default_color = Color(0.647059, 0.188235, 0.188235, 1)
theme_override_fonts/normal_font = ExtResource("2_yl4ud")
text = "Professor"
scroll_active = false
tab_size = 2
metadata/_edit_group_ = true

[node name="Text" type="RichTextLabel" parent="Quest_01"]
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 178.0
offset_bottom = 95.0
scale = Vector2(0.8, 0.8)
theme_override_colors/default_color = Color(0.0627451, 0.0784314, 0.121569, 1)
theme_override_fonts/normal_font = ExtResource("2_yl4ud")
text = "Você poderia acessar o computador que está na Cafeteria?"
tab_size = 2

[node name="Yes_button_01" type="Button" parent="Quest_01"]
layout_mode = 0
offset_left = 80.0
offset_top = 64.0
offset_right = 117.0
offset_bottom = 95.0
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0.658824, 0.792157, 0.345098, 1)
theme_override_fonts/font = ExtResource("2_yl4ud")
text = "Sim"

[node name="No_button_01" type="Button" parent="Quest_01"]
layout_mode = 0
offset_left = 112.0
offset_top = 64.0
offset_right = 149.0
offset_bottom = 95.0
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0.811765, 0.341176, 0.235294, 1)
theme_override_fonts/font = ExtResource("2_yl4ud")
text = "Não"

[node name="No_quest" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_left = -72.0
offset_top = -152.0
offset_right = 81.0
offset_bottom = -61.0
texture = ExtResource("1_h40qi")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Name" type="RichTextLabel" parent="No_quest"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 202.0
offset_bottom = 31.0
scale = Vector2(0.7, 0.7)
theme_override_colors/default_color = Color(0.647059, 0.188235, 0.188235, 1)
theme_override_fonts/normal_font = ExtResource("2_yl4ud")
text = "Professor"
scroll_active = false
tab_size = 2
metadata/_edit_group_ = true

[node name="Text" type="RichTextLabel" parent="No_quest"]
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 159.0
offset_bottom = 95.0
scale = Vector2(0.9, 0.9)
theme_override_colors/default_color = Color(0.0627451, 0.0784314, 0.121569, 1)
theme_override_fonts/normal_font = ExtResource("2_yl4ud")
text = "Nenhuma missão disponível no momento!"
tab_size = 2

[node name="Finished_quest" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_left = -72.0
offset_top = -152.0
offset_right = 81.0
offset_bottom = -61.0
texture = ExtResource("1_h40qi")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Name" type="RichTextLabel" parent="Finished_quest"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 202.0
offset_bottom = 31.0
scale = Vector2(0.7, 0.7)
theme_override_colors/default_color = Color(0.647059, 0.188235, 0.188235, 1)
theme_override_fonts/normal_font = ExtResource("2_yl4ud")
text = "Professor"
scroll_active = false
tab_size = 2
metadata/_edit_group_ = true

[node name="Text" type="RichTextLabel" parent="Finished_quest"]
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 159.0
offset_bottom = 95.0
scale = Vector2(0.9, 0.9)
theme_override_colors/default_color = Color(0.0627451, 0.0784314, 0.121569, 1)
theme_override_fonts/normal_font = ExtResource("2_yl4ud")
text = "Parabéns! Missão concluída com sucesso!"
tab_size = 2

[connection signal="pressed" from="Quest_01/Yes_button_01" to="." method="_on_yes_button_01_pressed"]
[connection signal="pressed" from="Quest_01/No_button_01" to="." method="_on_no_button_01_pressed"]
